--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <!-- end of single item -->
         <!-- single item -->
         <article class="menu-item">
-          <img src="./menu-item.jpeg" alt="menu item" class="photo" />
+          <img src="./menu-item.jpg" alt="menu item" class="photo" />
           <div class="item-info">
             <header>
               <h4>buttermilk pancakes</h4>
@@ -66,7 +66,7 @@
         <!-- end of single item -->
         <!-- single item -->
         <article class="menu-item">
-          <img src="./menu-item.jpeg" alt="menu item" class="photo" />
+          <img src="./menu-item.jpg" alt="menu item" class="photo" />
           <div class="item-info">
             <header>
               <h4>buttermilk pancakes</h4>
