--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       <div class="title">
         <h2>our menu</h2>
         <div class="underline"></div>
+        <h3>Made By- Atharva Gupta</h3>
+        <div class="underline"></div>
       </div>
       <!-- filter buttons -->
       <div class="btn-container">
