--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <section class="menu">
       <!-- title -->
       <div class="title">
-        <h2>our menu</h2>
+        <h2>restaurant menu</h2>
         <div class="underline"></div>
-        <h3>Made By- Atharva Gupta</h3>
+        <h4>made by- atharva gupta</h4>
         <div class="underline"></div>
       </div>
       <!-- filter buttons -->
